--- a/example/Thewissen.PancakeViewSample.iOS/Thewissen.PancakeViewSample.iOS.csproj
+++ b/example/Thewissen.PancakeViewSample.iOS/Thewissen.PancakeViewSample.iOS.csproj
@@ -203,9 +203,15 @@
     <ImageAsset Include="Assets.xcassets\monkey.imageset\monkey.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo%403x.png" />
-    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo%402x.png" />
-    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo.png" />
+    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo%403x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo%402x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\xamalogo.imageset\xamalogo.png">
+      <Visible>false</Visible>
+    </ImageAsset>
     <ImageAsset Include="Assets.xcassets\xamalogo.imageset\Contents.json">
       <Visible>False</Visible>
     </ImageAsset>
