--- a/src/Xamarin.Forms.PancakeView.Multi/Xamarin.Forms.PancakeView.Multi.csproj
+++ b/src/Xamarin.Forms.PancakeView.Multi/Xamarin.Forms.PancakeView.Multi.csproj
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/2.0.54">
     <PropertyGroup>
-        <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netstandard1.0;netstandard2.0;Xamarin.iOS10;xamarin.mac20;MonoAndroid90;tizen40</TargetFrameworks>
-        <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;uap10.0.16299;NET461;tizen40</TargetFrameworks>
+        <!--<TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netstandard1.0;netstandard2.0;Xamarin.iOS10;xamarin.mac20;MonoAndroid90;tizen40</TargetFrameworks>
+        <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;uap10.0.16299;NET461;tizen40</TargetFrameworks>-->
+      <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netstandard1.0;netstandard2.0;tizen40</TargetFrameworks>
+        <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard1.0;netstandard2.0;tizen40</TargetFrameworks>
       
         <!--Assembly and Namespace info -->
         <AssemblyName>Xamarin.Forms.PancakeView</AssemblyName>
@@ -54,7 +56,8 @@
         <Compile Include="Platforms\Shared\**\*.cs" />
         <!--NuGet that bring in good stuff -->
         <!--        <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />-->
-        <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+        <PackageReference Condition="'$(TargetFramework)' != 'tizen40'" Include="Xamarin.Forms" Version="3.6.0.220655" />
+        <PackageReference Condition="'$(TargetFramework)' == 'tizen40'" Include="Xamarin.Forms" Version="4.6.0.847" />
         <PackageReference Include="System.ComponentModel" Version="4.3.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     </ItemGroup>
@@ -98,7 +101,6 @@
     <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
       <Compile Include="Platforms\Tizen\**\*.cs" />
       <PackageReference Include="SkiaSharp.Views" Version="1.68.3" />
-      <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
     </ItemGroup>
     <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
